# ngshmmalign

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  README.md  autogen.sh  configure.ac  meson.build  meson_options.txt
src/: aligner.hpp  aligner_impl.hpp  debug.hpp  dna_array.hpp  fasta.hpp  fastq.hpp  hmmalign.hpp  hmmalign_impl.hpp  index_impl.hpp  main.cpp  meson.build  parameter_pack.hpp  reference.hpp  reference_impl.hpp  sam.hpp  utility_functions.hpp
testsuite/: dna_array_compile_test.cpp  hmmalign_forward_compile_test.cpp  meson.build  parameter_pack_compile_test.cpp  reference_compile_test.cpp  type_caster_compile_test.cpp
